--- a/be/src/main/resources/application.properties
+++ b/be/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.application.name=backend
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+
+spring.data.mongodb.uri=mongodb+srv://test:test@clusterbiscuit.l0mvcrm.mongodb.net/?retryWrites=true&w=majority&appName=ClusterBiscuit
+spring.data.mongodb.database=BiscuitGame
