--- a/be/pom.xml
+++ b/be/pom.xml
@@ -65,10 +65,10 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.mongodb</groupId>
-			<artifactId>mongodb-driver-sync</artifactId>
-			<version>4.11.1</version> <!-- oder aktuelle Version -->
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb</artifactId>
 		</dependency>
+
 
 	</dependencies>
 
